prevent overflow on small phones

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,4 +88,8 @@ h4 {
   body {
     font-size: 14px;
   }
+
+  main {
+    overflow-x: hidden;
+  }
 }
